tests/compile_time_tests/tag_attribute_argument_empty.stderr
error: `tag` attribute expects an assignment expression `[tag(case = "lower" | "upper")]`
 --> tests/compile_time_tests/tag_attribute_argument_empty.rs:5:5
  |
5 |     #[tag]
  |     ^
